# stockpilot

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/src/stockpilot_api/: __init__.py  auth.py  main.py  models.py  workflow.py
apps/api/src/stockpilot_api/agents/: __init__.py  base.py  master.py  persistence.py  schemas.py  technical.py
apps/api/src/stockpilot_api/backtest/: __init__.py  config.py  costs.py  engine.py  metrics.py  run.py
apps/api/src/stockpilot_api/engine/: __init__.py  module_10_portfolio.py  module_1_market.py  module_2_sector.py  module_3_fundamentals.py  module_4_technical.py  module_5_moving_averages.py  module_6_momentum.py  module_7_volume.py  module_8_news.py  module_9_risk.py
apps/api/src/stockpilot_api/indicators/: __init__.py  atr.py  ema.py  relative_strength.py  rsi.py  sma.py
apps/api/src/stockpilot_api/ingestion/: __init__.py  yfinance_sync.py
apps/api/src/stockpilot_api/llm/: __init__.py  client.py  config.py  gateway.py  openai_transport.py
apps/api/src/stockpilot_api/mcp/: __init__.py  data_access.py  registry.py  technical_server.py  technical_tools.py
apps/api/src/stockpilot_api/orchestration/: __init__.py  graph.py  nodes.py  state.py
apps/api/src/stockpilot_api/patterns/: __init__.py  ascending_triangle.py  (+7 more)
apps/api/tests/: conftest.py  test_agents.py  test_backtest.py  test_indicators.py  test_module_1_market.py  test_module_5_moving_averages.py  test_module_9_risk.py  test_orchestration.py  test_patterns.py  test_scoring.py
(+64 files in other folders)
